fixed btn sizing on mobile

--- a/css/capitolhill.scss
+++ b/css/capitolhill.scss
@@ -402,14 +402,8 @@ img {
     }
 
     button.btn.btn-secondary.rowThreeBtns {
-        width: 265px;
-        height: 45px;
-        margin: 0 0 20px 0;
-    }
-
-    button.btn.btn-secondary.rowThreeBtns {
-        width: 200px;
-        height: 30px;
+        width: 250px;
+        height: 40px;
         padding: 0 0 0 0;
         margin: 0 0 20px 0;
     }
